J2J Component (http://wiki.jrudevels.org/J2J) Changelog:
1.2.10:
	[add] Roster import by sending subscribe-presence and settings for it in
	jabber:iq:register form
	[add] Command-line option -b for daemonize j2j
	[add] Auto connect users where j2j is started
	[add] Auto disconnect users where terminate signal is received

	[chg] use hashlib instead of md5

	[imp] db schema improvements

	[fix] Add message body in error stanza

1.1.9:
    [fix] Autoanswer fix: no answer to groupchat and headline messages

1.1.8:
    [add] Experemental MySQL support.
    [add] vCard replication
    [add] Some command-line options
    [add] Some logs

    [chg] New configuration scheme
 
    [fix] jabber:iq:roster "from" attribute interpretation fix
    [fix] svn ps svn:executable \* https://svn.jrudevels.org/j2j/trunk/main.py; svn ps svn:ignore \*.pyc https://svn.jrudevels.org/j2j/trunk/
    [fix] AdHoc handling bug
    [fix] Localization problems
    [fix] error stanzas