@@ -11,6 +11,7 @@ J2J Component (http://wiki.jrudevels.org/J2J) Changelog:
 	[imp] db schema improvements
 
 	[fix] Add message body in error stanza
+    [fix] Add handling of DNSServerError when connecting via C2S
 
 1.1.9:
     [fix] Autoanswer fix: no answer to groupchat and headline messages
